--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -1,5 +1,7 @@
-- default: menu_index
+
+- title: 'Blog'
   url: ''
+
 
 - default: menu_category
   url: 'categories'
@@ -8,9 +10,6 @@
 #- title: 'Jekyll Paper for Github'
 #  absoluteUrl: true
 #  url: 'https://github.com/ghosind/Jekyll-Paper-Github'
-
-- default: menu_contact
-  url: 'contact'
 
 - default: menu_about
   url: 'about'
